Adding / to all mount in skipper yaml cause pod,am

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -3,10 +3,10 @@ build-container-image: test-infra
 build-container-tag: latest
 
 volumes:
-    - $HOME/.cache/go-build:/go/pkg/mod
-    - $HOME/.minikube:$HOME/.minikube
-    - $HOME/.kube/:$HOME/.kube
-    - /var/lib/libvirt:/var/lib/libvirt
-    - /var/run/libvirt:/var/run/libvirt
-    - /tmp:/tmp
-    - $HOME/.cache/libvirt:$HOME/.cache/libvirt
+    - $HOME/.cache/go-build/:/go/pkg/mod/
+    - $HOME/.minikube/:$HOME/.minikube/
+    - $HOME/.kube/:$HOME/.kube/
+    - /var/lib/libvirt/:/var/lib/libvirt/
+    - /var/run/libvirt/:/var/run/libvirt/
+    - /tmp:/tmp/
+    - $HOME/.cache/libvirt/:$HOME/.cache/libvirt/
