--- a/skipper.yaml
+++ b/skipper.yaml
@@ -11,3 +11,7 @@ volumes:
     - /tmp:/tmp/
     - /var/lib/libvirt/dnsmasq/:/var/lib/libvirt/dnsmasq/
     - $HOME/.cache/libvirt/:$HOME/.cache/libvirt/
+env:
+    PULL_SECRET: $PULL_SECRET
+    NUM_WORKERS: $NUM_WORKERS
+    SSH_PUB_KEY: $SSH_PUB_KEY
