--- a/skipper.yaml
+++ b/skipper.yaml
@@ -23,3 +23,4 @@ env:
     INSTALLER_IMAGE: $INSTALLER_IMAGE
     NETWORK_BRIDGE: $NETWORK_BRIDGE
     OPENSHIFT_VERSION: $OPENSHIFT_VERSION
+    KUBECONFIG: $KUBECONFIG
