Adding support for external ip fo bm inventory Adding ui deployment and port forwarding for external use

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -25,3 +25,5 @@ env:
     OPENSHIFT_VERSION: $OPENSHIFT_VERSION
     KUBECONFIG: $KUBECONFIG
     PROXY_URL:   $PROXY_URL
+    INVENTORY_URL: $INVENTORY_URL
+    INVENTORY_PORT: $INVENTORY_PORT
