Adding AGENT_DOCKER_IMAGE

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -27,3 +27,4 @@ env:
     PROXY_URL:   $PROXY_URL
     INVENTORY_URL: $INVENTORY_URL
     INVENTORY_PORT: $INVENTORY_PORT
+    AGENT_DOCKER_IMAGE: $AGENT_DOCKER_IMAGE
