Give full path to skipper in Makefile

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -28,3 +28,4 @@ env:
     INVENTORY_URL: $INVENTORY_URL
     INVENTORY_PORT: $INVENTORY_PORT
     AGENT_DOCKER_IMAGE: $AGENT_DOCKER_IMAGE
+    IMAGE: $IMAGE
