Fixing BMI_BRANCH passing

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -29,3 +29,4 @@ env:
     INVENTORY_PORT: $INVENTORY_PORT
     AGENT_DOCKER_IMAGE: $AGENT_DOCKER_IMAGE
     IMAGE: $IMAGE
+    BMI_BRANCH: $BMI_BRANCH
