--- a/skipper.yaml
+++ b/skipper.yaml
@@ -31,3 +31,4 @@ env:
     AGENT_DOCKER_IMAGE: $AGENT_DOCKER_IMAGE
     IMAGE: $IMAGE
     BMI_BRANCH: $BMI_BRANCH
+    RUN_WITH_VIPS: $RUN_WITH_VIPS
