Fix bm-inventory deploy all Add OBJEXP env to skipper

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -20,6 +20,7 @@ env:
     NETWORK_CIDR: $NETWORK_CIDR
     NETWORK_NAME: $NETWORK_NAME
     SERVICE: $SERVICE
+    OBJEXP: $OBJEXP
     INSTALLER_IMAGE: $INSTALLER_IMAGE
     NETWORK_BRIDGE: $NETWORK_BRIDGE
     OPENSHIFT_VERSION: $OPENSHIFT_VERSION
