Adding KUBECONFIG_GENERATE_IMAGE to supported flags

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -32,3 +32,4 @@ env:
     IMAGE: $IMAGE
     BMI_BRANCH: $BMI_BRANCH
     RUN_WITH_VIPS: $RUN_WITH_VIPS
+    KUBECONFIG_GENERATE_IMAGE: $KUBECONFIG_GENERATE_IMAGE
