--- a/skipper.yaml
+++ b/skipper.yaml
@@ -33,3 +33,5 @@ env:
     BMI_BRANCH: $BMI_BRANCH
     RUN_WITH_VIPS: $RUN_WITH_VIPS
     KUBECONFIG_GENERATE_IMAGE: $KUBECONFIG_GENERATE_IMAGE
+    REMOTE_INVENTORY_URL: $REMOTE_INVENTORY_URL
+    CLUSTER_ID: $CLUSTER_ID
