--- a/Dockerfile.test-infra
+++ b/Dockerfile.test-infra
@@ -8,15 +8,11 @@ RUN curl -Lo minikube https://storage.googleapis.com/minikube/releases/v1.10.1/m
   && chmod +x minikube && mkdir -p /usr/local/bin/ && install minikube /usr/local/bin/
 RUN curl -Lo kubectl https://storage.googleapis.com/kubernetes-release/release/v1.17.0/bin/linux/amd64/kubectl && chmod +x kubectl && mv kubectl /usr/bin/
 
-ENV PATH /usr/local/go/bin:$PATH
 RUN mkdir -p ~/.terraform.d/plugins
-RUN wget https://github.com/dmacvicar/terraform-provider-libvirt/releases/download/v0.6.2/terraform-provider-libvirt-0.6.2+git.1585292411.8cbe9ad0.Fedora_28.x86_64.tar.gz \
- && tar -C ~/.terraform.d/plugins  -xf terraform-provider-libvirt-0.6.2+git.1585292411.8cbe9ad0.Fedora_28.x86_64.tar.gz \
- && rm -rf terraform-provider-libvirt-0.6.2+git.1585292411.8cbe9ad0.Fedora_28.x86_64.tar.gz
-
-# Installing pre-commit
-COPY .pre-commit-config.yaml /build/
+RUN curl -SL https://github.com/dmacvicar/terraform-provider-libvirt/releases/download/v0.6.2/terraform-provider-libvirt-0.6.2+git.1585292411.8cbe9ad0.Fedora_28.x86_64.tar.gz | tar -xz -C ~/.terraform.d/plugins/
 
 COPY requirements.txt /tmp/
 RUN pip3 install --no-cache-dir -r /tmp/requirements.txt
 
+# setting pre-commit env
+ENV PRE_COMMIT_HOME build
