Support Route53 DNS env variables
Added support for ROUTE53_SECRET and BASE_DNS_DOMAINS env vars.
* ROUTE53_SECRET: base64 of ./aws/credentials file.
* BASE_DNS_DOMAINS: should be in the following format,
  name1:id1/provider1,name2:id2/provider2

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -36,3 +36,5 @@ env:
   REMOTE_INVENTORY_URL: $REMOTE_INVENTORY_URL
   CLUSTER_ID: $CLUSTER_ID
   NUM_MASTERS: $NUM_MASTERS
+  BASE_DNS_DOMAINS: $BASE_DNS_DOMAINS
+  ROUTE53_SECRET: $ROUTE53_SECRET
