Added option to configure the disk sizes

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -38,3 +38,5 @@ env:
   NUM_MASTERS: $NUM_MASTERS
   BASE_DNS_DOMAINS: $BASE_DNS_DOMAINS
   ROUTE53_SECRET: $ROUTE53_SECRET
+  MASTER_DISK: $MASTER_DISK
+  WORKER_DISK: $WORKER_DISK
