Add CONTROLLER_IMAGE environment variable

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -22,6 +22,7 @@ env:
   SERVICE: $SERVICE
   OBJEXP: $OBJEXP
   INSTALLER_IMAGE: $INSTALLER_IMAGE
+  CONTROLLER_IMAGE: $CONTROLLER_IMAGE
   NETWORK_BRIDGE: $NETWORK_BRIDGE
   OPENSHIFT_VERSION: $OPENSHIFT_VERSION
   KUBECONFIG: $KUBECONFIG
