Fixing deploying from ISO

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -30,7 +30,7 @@ env:
   INVENTORY_URL: $INVENTORY_URL
   INVENTORY_PORT: $INVENTORY_PORT
   AGENT_DOCKER_IMAGE: $AGENT_DOCKER_IMAGE
-  IMAGE: $IMAGE
+  ISO: $ISO
   BMI_BRANCH: $BMI_BRANCH
   RUN_WITH_VIPS: $RUN_WITH_VIPS
   KUBECONFIG_GENERATE_IMAGE: $KUBECONFIG_GENERATE_IMAGE
