Support custom MTU for nodes libvirt network
Signed-off-by: Moti Asayag <masayag@redhat.com>

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -19,6 +19,7 @@ env:
   BASE_DOMAIN: $BASE_DOMAIN
   NETWORK_CIDR: $NETWORK_CIDR
   NETWORK_NAME: $NETWORK_NAME
+  NETWORK_MTU: $NETWORK_MTU
   SERVICE: $SERVICE
   OBJEXP: $OBJEXP
   INSTALLER_IMAGE: $INSTALLER_IMAGE
