Allow customize images for inventory configmap
Signed-off-by: Moti Asayag <masayag@redhat.com>

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -40,3 +40,7 @@ env:
   NUM_MASTERS: $NUM_MASTERS
   BASE_DNS_DOMAINS: $BASE_DNS_DOMAINS
   ROUTE53_SECRET: $ROUTE53_SECRET
+  IMAGE_BUILDER: $IMAGE_BUILDER
+  CONNECTIVITY_CHECK_IMAGE: $CONNECTIVITY_CHECK_IMAGE
+  HARDWARE_INFO_IMAGE: $HARDWARE_INFO_IMAGE
+  INVENTORY_IMAGE: $INVENTORY_IMAGE
