Allow customize images for inventory configmap (#61)
Signed-off-by: Moti Asayag <masayag@redhat.com>

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -42,3 +42,7 @@ env:
   MASTER_DISK: $MASTER_DISK
   WORKER_DISK: $WORKER_DISK
   NAMESPACE: $NAMESPACE
+  IMAGE_BUILDER: $IMAGE_BUILDER
+  CONNECTIVITY_CHECK_IMAGE: $CONNECTIVITY_CHECK_IMAGE
+  HARDWARE_INFO_IMAGE: $HARDWARE_INFO_IMAGE
+  INVENTORY_IMAGE: $INVENTORY_IMAGE
