--- a/skipper.yaml
+++ b/skipper.yaml
@@ -28,15 +28,15 @@ env:
   OPENSHIFT_VERSION: $OPENSHIFT_VERSION
   KUBECONFIG: $KUBECONFIG
   PROXY_URL:   $PROXY_URL
-  INVENTORY_URL: $INVENTORY_URL
-  INVENTORY_PORT: $INVENTORY_PORT
+  SERVICE_URL: $SERVICE_URL
+  SERVICE_PORT: $SERVICE_PORT
   AGENT_DOCKER_IMAGE: $AGENT_DOCKER_IMAGE
   ISO: $ISO
-  BMI_BRANCH: $BMI_BRANCH
-  BMI_REPO: $BMI_REPO
+  SERVICE_BRANCH: $SERVICE_BRANCH
+  SERVICE_REPO: $SERVICE_REPO
   RUN_WITH_VIPS: $RUN_WITH_VIPS
   KUBECONFIG_GENERATE_IMAGE: $KUBECONFIG_GENERATE_IMAGE
-  REMOTE_INVENTORY_URL: $REMOTE_INVENTORY_URL
+  REMOTE_SERVICE_URL: $REMOTE_SERVICE_URL
   CLUSTER_ID: $CLUSTER_ID
   NUM_MASTERS: $NUM_MASTERS
   BASE_DNS_DOMAINS: $BASE_DNS_DOMAINS
