MGMT-882 Replace host and port with a single URL parameter

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -28,8 +28,7 @@ env:
   OPENSHIFT_VERSION: $OPENSHIFT_VERSION
   KUBECONFIG: $KUBECONFIG
   PROXY_URL:   $PROXY_URL
-  SERVICE_URL: $SERVICE_URL
-  SERVICE_PORT: $SERVICE_PORT
+  SERVICE_BASE_URL: $SERVICE_BASE_URL
   AGENT_DOCKER_IMAGE: $AGENT_DOCKER_IMAGE
   ISO: $ISO
   SERVICE_BRANCH: $SERVICE_BRANCH
