--- a/Dockerfile.test-infra
+++ b/Dockerfile.test-infra
@@ -1,6 +1,6 @@
 FROM quay.io/ocpmetal/bm-inventory:latest AS inventory
 
-FROM centos:8
+FROM docker.io/centos:8
 
 RUN yum -y install make python3 libvirt-client libvirt-devel gcc unzip wget curl git python3-devel && yum clean all;
 
