Allow pulling BM installer from arbitrary Git repository (#77)
* Allow pulling BM installer from arbitrary Git repository

* Add BMI Git repository parameter to skipper

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -33,6 +33,7 @@ env:
   AGENT_DOCKER_IMAGE: $AGENT_DOCKER_IMAGE
   ISO: $ISO
   BMI_BRANCH: $BMI_BRANCH
+  BMI_REPO: $BMI_REPO
   RUN_WITH_VIPS: $RUN_WITH_VIPS
   KUBECONFIG_GENERATE_IMAGE: $KUBECONFIG_GENERATE_IMAGE
   REMOTE_INVENTORY_URL: $REMOTE_INVENTORY_URL
