Added samba share for mounting ISO for SuperMicro servers, added commands to properly mount and boot an ISO for supermicroservers, modified REMOTE_INVENTORY_URL to REMOTE_SERVICE_URL parameter for creating ISO, REMOTE_SERVICE_URL part of the inventory/hosts file for easy modification of your environment

--- a/ansible-bm-install/collections/ansible_collections/okd/assisted_installer/roles/validations/tasks/main.yml
+++ b/ansible-bm-install/collections/ansible_collections/okd/assisted_installer/roles/validations/tasks/main.yml
@@ -26,3 +26,9 @@
   with_items:
   - "{{ groups['masters'] }}"
   - "{{ groups['workers'] | default([]) }}"
+
+- name: Fail if remote_service_url is empty
+  fail:
+    msg: |
+         The remote service URL is empty. Need a value similar to http://example.com:6000
+  when: remote_service_url|length == 0
