--- a/ansible-bm-install/collections/ansible_collections/okd/assisted_installer/roles/boot_iso/tasks/boot_iso.yml
+++ b/ansible-bm-install/collections/ansible_collections/okd/assisted_installer/roles/boot_iso/tasks/boot_iso.yml
@@ -109,7 +109,22 @@
         body: {}
         body_format: json
         validate_certs: no
-        status_code: [200,202,204]
+        force_basic_auth: yes
+        return_content: yes
+
+    - name: Patching Host and Path for Mounting ISO
+      uri:
+        url: "https://{{ hostvars[item]['bmc_address'] }}/redfish/v1/Managers/1/VM1/CfgCD"
+        user: "{{ hostvars[item]['bmc_user'] }}"
+        password: "{{ hostvars[item]['bmc_password'] }}"
+        method: PATCH
+        headers:
+          content-type: application/json
+          Accept: application/json
+        body: "{\"Host\": \"{{ groups['assisted_installer'][0] }}\", \"Path\": \"\\\\share\\\\installer-image.iso\"}"
+        body_format: json
+        force_basic_auth: yes
+        validate_certs: no
         return_content: yes
 
     - name: Mount SuperMicro ISO
@@ -117,13 +132,43 @@
         url: "https://{{ hostvars[item]['bmc_address'] }}/redfish/v1/Managers/1/VM1/CfgCD/Actions/IsoConfig.Mount"
         user: "{{ hostvars[item]['bmc_user'] }}"
         password: "{{ hostvars[item]['bmc_password'] }}"
+        method: POST
+        headers:
+          content-type: application/json
+          Accept: application/json
+        body: {}
+        body_format: json
+        validate_certs: no
+        force_basic_auth: yes
+        return_content: yes
+
+    - name: Set Boot for the SuperMicro
+      uri:
+        url: "https://{{ hostvars[item]['bmc_address'] }}/redfish/v1/Systems/1"
+        user: "{{ hostvars[item]['bmc_user'] }}"
+        password: "{{ hostvars[item]['bmc_password'] }}"
         method: PATCH
         headers:
           content-type: application/json
           Accept: application/json
-        body: {"Host": "{{ groups['assisted_installer'][0] }}:8080","Path": "\\ISO\\installer-image.iso"}
+        body: '{"Boot":{"BootSourceOverrideEnabled":"Once","BootSourceOverrideTarget":"UsbCd"}}'
         body_format: json
+        force_basic_auth: yes
         validate_certs: no
-        status_code: [200,202,204]
+        return_content: yes
+
+    - name: Restart the SuperMicro
+      uri:
+        url: "https://{{ hostvars[item]['bmc_address'] }}/redfish/v1/Systems/1/Actions/ComputerSystem.Reset"
+        user: "{{ hostvars[item]['bmc_user'] }}"
+        password: "{{ hostvars[item]['bmc_password'] }}"
+        method: POST
+        headers:
+          content-type: application/json
+          Accept: application/json
+        body: '{"ResetType": "ForceRestart"}'
+        body_format: json
+        force_basic_auth: yes
+        validate_certs: no
         return_content: yes
   when: hostvars[item]['vendor'] == 'SuperMicro'
