--- a/ansible-bm-install/collections/ansible_collections/okd/assisted_installer/roles/host_iso/tasks/main.yml
+++ b/ansible-bm-install/collections/ansible_collections/okd/assisted_installer/roles/host_iso/tasks/main.yml
@@ -15,6 +15,8 @@
     state: started
     enabled: yes
   become: yes
+  tags:
+  - host_iso
 
 - name: Open port {{ webserver_port }}/tcp, zone public, for podman container
   firewalld:
@@ -24,6 +26,22 @@
     zone: "public"
     immediate: yes
   become: yes
+  tags:
+  - host_iso
+
+- name: Enable samba and samba-client for podman container
+  firewalld:
+    service: "{{ item }}"
+    permanent: yes
+    state: enabled
+    zone: "public"
+    immediate: yes
+  loop:
+    - "samba"
+    - "samba-client"
+  become: yes
+  tags:
+  - host_iso
 
 - name: Start RHCOS image cache container
   containers.podman.podman_container:
@@ -34,5 +52,24 @@
     volumes:
       - "{{ iso_image_location }}:/var/www/html:z"
   become: yes
+  tags:
+  - host_iso
+
+- name: Start samba container
+  containers.podman.podman_container:
+    name: samba_share
+    image: dperson/samba
+    state: started
+    volumes:
+      - "{{ iso_image_location }}:/share:z"
+    env:
+      USERID: 1002
+      GROUPID: 64003
+    ports:
+      - "138:138/udp"
+      - "137:137/udp"
+      - "445:445"
+      - "139:139"
+    command: ['-n', '-s', 'share;/share;yes;yes;yes;all;none;none;Shared_files', '-p', '-g', 'usershare allow guests = yes', '-g', 'map to guest = bad user', '-g', 'load printers = no', '-g', 'printcap cache time = 0', '-g', 'printing = bsd', '-g', 'printcap name = /dev/null', '-g','disable spoolss = yes', '-g', 'server min protocol = NT1']
   tags:
   - host_iso
