MGMT-1765: Get remote assisted-service url
In case target is remote (oc, oc-ingress), get assisted-installer
url using kubectl get route command. Accept service-name argument
which represents the assisted-installer remote service name, that
ideally should be 'assisted-service' but currently called on psi
'bm-inventory'.

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -47,3 +47,7 @@ env:
   CONNECTIVITY_CHECK_IMAGE: $CONNECTIVITY_CHECK_IMAGE
   HARDWARE_INFO_IMAGE: $HARDWARE_INFO_IMAGE
   INVENTORY_IMAGE: $INVENTORY_IMAGE
+  TARGET: $TARGET
+  OC_TOKEN: $OC_TOKEN
+  OC_SERVER: $OC_SERVER
+  SERVICE_NAME: $SERVICE_NAME
