--- a/Dockerfile.test-infra
+++ b/Dockerfile.test-infra
@@ -17,7 +17,7 @@ RUN curl -SL https://github.com/dmacvicar/terraform-provider-libvirt/releases/do
 COPY requirements.txt /tmp/
 COPY --from=service /clients/assisted-service-client-*.tar.gz /build/pip/
 RUN pip3 install --no-cache-dir -r /tmp/requirements.txt && \
-    find /build/pip/ -name 'setup.py' -exec dirname {} \; | xargs pip3 install
+    pip3 install /build/pip/*
 
 # TODO: Remove once OpenShift CI will be upgraded to 4.2 (see https://access.redhat.com/articles/4859371)
 RUN chmod uga+w /etc/passwd
