--- a/skipper.yaml
+++ b/skipper.yaml
@@ -47,3 +47,5 @@ env:
   CONNECTIVITY_CHECK_IMAGE: $CONNECTIVITY_CHECK_IMAGE
   HARDWARE_INFO_IMAGE: $HARDWARE_INFO_IMAGE
   INVENTORY_IMAGE: $INVENTORY_IMAGE
+  SERVICE_NAME: $SERVICE_NAME
+  OC_PARAMS: $OC_PARAMS
