Add OCM integration parameters

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -54,3 +54,6 @@ env:
   ENABLE_AUTH: $ENABLE_AUTH
   OFFLINE_TOKEN: $OFFLINE_TOKEN
   SSO_URL: $SSO_URL
+  OCM_CLIENT_ID: $OCM_CLIENT_ID
+  OCM_CLIENT_SECRET: $OCM_CLIENT_SECRET
+  OCM_BASE_URL: $OCM_BASE_URL
