--- a/skipper.yaml
+++ b/skipper.yaml
@@ -29,7 +29,7 @@ env:
   KUBECONFIG: $KUBECONFIG
   HTTP_PROXY_URL: $HTTP_PROXY_URL
   HTTPS_PROXY_URL: $HTTPS_PROXY_URL
-  NO_PROXY: $NO_PROXY
+  NO_PROXY_VALUES: $NO_PROXY_VALUES
   SERVICE_BASE_URL: $SERVICE_BASE_URL
   AGENT_DOCKER_IMAGE: $AGENT_DOCKER_IMAGE
   ISO: $ISO
