--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 
 boto3==1.13.11
 dnspython==1.16.0
+ipython
 libvirt-python==4.5.0
 pre-commit==2.5.1
 pyyaml==5.3.1
+kubernetes==11.0.0
 requests==2.20.0
 retry==0.9.2
 tqdm==4.46.0
 waiting==1.4.1
-kubernetes==11.0.0
+
