MGMT-1719 Add vip_dhcp_allocation paramter to cluster

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -35,7 +35,6 @@ env:
   ISO: $ISO
   SERVICE_BRANCH: $SERVICE_BRANCH
   SERVICE_REPO: $SERVICE_REPO
-  RUN_WITH_VIPS: $RUN_WITH_VIPS
   KUBECONFIG_GENERATE_IMAGE: $KUBECONFIG_GENERATE_IMAGE
   REMOTE_SERVICE_URL: $REMOTE_SERVICE_URL
   CLUSTER_ID: $CLUSTER_ID
@@ -57,3 +56,4 @@ env:
   OCM_CLIENT_ID: $OCM_CLIENT_ID
   OCM_CLIENT_SECRET: $OCM_CLIENT_SECRET
   OCM_BASE_URL: $OCM_BASE_URL
+  VIP_DHCP_ALLOCATION : $VIP_DHCP_ALLOCATION
