--- a/skipper.yaml
+++ b/skipper.yaml
@@ -57,3 +57,4 @@ env:
   OCM_CLIENT_SECRET: $OCM_CLIENT_SECRET
   OCM_BASE_URL: $OCM_BASE_URL
   VIP_DHCP_ALLOCATION : $VIP_DHCP_ALLOCATION
+  NAMESPACE_INDEX: $NAMESPACE_INDEX
