--- a/skipper.yaml
+++ b/skipper.yaml
@@ -58,3 +58,4 @@ env:
   OCM_BASE_URL: $OCM_BASE_URL
   VIP_DHCP_ALLOCATION : $VIP_DHCP_ALLOCATION
   NAMESPACE_INDEX: $NAMESPACE_INDEX
+  PROFILE: $PROFILE
