skipper: added SERVICE_REPLICAS_COUNT
Added SERVICE_REPLICAS_COUNT to skipper file,
to support replicas configuration with env var.

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -59,3 +59,4 @@ env:
   NAMESPACE_INDEX: $NAMESPACE_INDEX
   PROFILE: $PROFILE
   KEEP_ISO_FLAG: $KEEP_ISO_FLAG
+  SERVICE_REPLICAS_COUNT: $SERVICE_REPLICAS_COUNT
