--- a/skipper.yaml
+++ b/skipper.yaml
@@ -58,3 +58,4 @@ env:
   VIP_DHCP_ALLOCATION : $VIP_DHCP_ALLOCATION
   NAMESPACE_INDEX: $NAMESPACE_INDEX
   PROFILE: $PROFILE
+  KEEP_ISO_FLAG: $KEEP_ISO_FLAG
