Raz/mgmt 2104 parallel ci support (#125)
* MGMT-2104: Remove deletion of indexes and ports in create_full_environment

for CI purposes - in order to avoid conflicts.

* MGMT-2104: Change Jenkinsfile to support parallel execution

* MGMT-2104: Removed unused network bridge variable

* MGMT-2104: changed indexes path from build to temp

* MGMT-2104: delete iso after discovery

Since iso does not overrides itself anymore, each run
takes more space on disk. start_discovery.py should delete
the image by default after creating the nodes.

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -24,7 +24,6 @@ env:
   OBJEXP: $OBJEXP
   INSTALLER_IMAGE: $INSTALLER_IMAGE
   CONTROLLER_IMAGE: $CONTROLLER_IMAGE
-  NETWORK_BRIDGE: $NETWORK_BRIDGE
   OPENSHIFT_VERSION: $OPENSHIFT_VERSION
   KUBECONFIG: $KUBECONFIG
   HTTP_PROXY_URL: $HTTP_PROXY_URL
@@ -59,3 +58,4 @@ env:
   VIP_DHCP_ALLOCATION : $VIP_DHCP_ALLOCATION
   NAMESPACE_INDEX: $NAMESPACE_INDEX
   PROFILE: $PROFILE
+  KEEP_ISO_FLAG: $KEEP_ISO_FLAG
