MGMT-1866 Update KUBECONFIG_GENERATE_IMAGE to IGNITION_GENERATE_IMAGE

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -34,7 +34,7 @@ env:
   ISO: $ISO
   SERVICE_BRANCH: $SERVICE_BRANCH
   SERVICE_REPO: $SERVICE_REPO
-  KUBECONFIG_GENERATE_IMAGE: $KUBECONFIG_GENERATE_IMAGE
+  IGNITION_GENERATE_IMAGE: $IGNITION_GENERATE_IMAGE
   REMOTE_SERVICE_URL: $REMOTE_SERVICE_URL
   CLUSTER_ID: $CLUSTER_ID
   NUM_MASTERS: $NUM_MASTERS
