Pass UI image variable in Skipper

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -60,3 +60,4 @@ env:
   PROFILE: $PROFILE
   KEEP_ISO_FLAG: $KEEP_ISO_FLAG
   SERVICE_REPLICAS_COUNT: $SERVICE_REPLICAS_COUNT
+  UI_IMAGE: $UI_IMAGE
