adding vmw support

--- a/ansible-bm-install/collections/ansible_collections/okd/assisted_installer/roles/boot_iso/defaults/main.yml
+++ b/ansible-bm-install/collections/ansible_collections/okd/assisted_installer/roles/boot_iso/defaults/main.yml
@@ -1,2 +1,7 @@
 ---
 # defaults file for boot_iso
+vcenter_username: "administrator@vsphere.local"
+vcenter_network: "VM Network"
+vcenter_vm_disk: 150
+vcenter_vm_mem_mb: 16384
+vcenter_vm_cpu: 4
