--- a/ansible-bm-install/collections/ansible_collections/okd/assisted_installer/roles/boot_iso/tasks/main.yml
+++ b/ansible-bm-install/collections/ansible_collections/okd/assisted_installer/roles/boot_iso/tasks/main.yml
@@ -1,7 +1,26 @@
 ---
 # tasks file for boot_iso
 
-- include_tasks: boot_iso.yml
+- include_tasks: dell.yml
   with_items:
     - "{{ groups['masters'] }}"
     - "{{ groups['workers'] | default([]) }}"
+  when: hostvars[item]['vendor'] == 'Dell'
+
+- include_tasks: hpe.yml
+  with_items:
+    - "{{ groups['masters'] }}"
+    - "{{ groups['workers'] | default([]) }}"
+  when: hostvars[item]['vendor'] == 'HPE'
+
+- include_tasks: supermicro.yml
+  with_items:
+    - "{{ groups['masters'] }}"
+    - "{{ groups['workers'] | default([]) }}"
+  when: hostvars[item]['vendor'] == 'SuperMicro'
+
+- include_tasks: vmware.yml
+  with_items:
+    - "{{ groups['masters'] }}"
+    - "{{ groups['workers'] | default([]) }}"
+  when: hostvars[item]['vendor'] == 'VMware'
