--- a/ansible-bm-install/collections/ansible_collections/okd/assisted_installer/roles/validations/tasks/main.yml
+++ b/ansible-bm-install/collections/ansible_collections/okd/assisted_installer/roles/validations/tasks/main.yml
@@ -32,3 +32,7 @@
     msg: |
          The remote service URL is empty. Need a value similar to http://example.com:6000
   when: remote_service_url|length == 0
+
+- name: Check for required VMware pre-reqs
+  include_tasks: vmware.yml
+  when: vcenter_datastore is defined
