MGMT-2080 - add support for day2 flow

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -61,3 +61,5 @@ env:
   KEEP_ISO_FLAG: $KEEP_ISO_FLAG
   SERVICE_REPLICAS_COUNT: $SERVICE_REPLICAS_COUNT
   UI_IMAGE: $UI_IMAGE
+  API_VIP_IP: $API_VIP_IP
+  API_VIP_DNSNAME: $API_VIP_DNSNAME
