MGMT-1803 Add on-prem to test infra
Added support for testing the e2e flow using onprem. Introduces
two additional environment variables:

DEPLOY_TARGET - specifies where assisted-service is deployed. minikube
or podman-localhost. In the future there could be a podman-liveiso option.

ASSISTED_SERVICE_HOST - specifies the FQDN or IP address where assisted-service
when DEPLOY_TARGET is podman-localhost. This differs from minikube where
the service url can be discovered.

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -64,3 +64,5 @@ env:
   UI_IMAGE: $UI_IMAGE
   API_VIP_IP: $API_VIP_IP
   API_VIP_DNSNAME: $API_VIP_DNSNAME
+  DEPLOY_TARGET: $DEPLOY_TARGET
+  ASSISTED_SERVICE_HOST: $ASSISTED_SERVICE_HOST
