First Drop off of qe testing in test infra Adds test case for cancel/reset after node boot

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -67,3 +67,4 @@ env:
   DEPLOY_TARGET: $DEPLOY_TARGET
   ASSISTED_SERVICE_HOST: $ASSISTED_SERVICE_HOST
   LOGS_DEST: $LOGS_DEST
+  NODE_ENV: $NODE_ENV
