MGMT-2345 Download cluster logs, events and host logs

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -66,3 +66,4 @@ env:
   API_VIP_DNSNAME: $API_VIP_DNSNAME
   DEPLOY_TARGET: $DEPLOY_TARGET
   ASSISTED_SERVICE_HOST: $ASSISTED_SERVICE_HOST
+  LOGS_DEST: $LOGS_DEST
