--- a/skipper.yaml
+++ b/skipper.yaml
@@ -68,3 +68,4 @@ env:
   ASSISTED_SERVICE_HOST: $ASSISTED_SERVICE_HOST
   LOGS_DEST: $LOGS_DEST
   NODE_ENV: $NODE_ENV
+  NUM_DAY2_WORKERS: $NUM_DAY2_WORKERS
