--- a/skipper.yaml
+++ b/skipper.yaml
@@ -46,6 +46,7 @@ env:
   NAMESPACE: $NAMESPACE
   IMAGE_BUILDER: $IMAGE_BUILDER
   CONNECTIVITY_CHECK_IMAGE: $CONNECTIVITY_CHECK_IMAGE
+  API_VIP_CONNECTIVITY_CHECK_IMAGE: $API_VIP_CONNECTIVITY_CHECK_IMAGE
   HARDWARE_INFO_IMAGE: $HARDWARE_INFO_IMAGE
   INVENTORY_IMAGE: $INVENTORY_IMAGE
   SERVICE_NAME: $SERVICE_NAME
