--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ libvirt-python==6.8.0
 pre-commit==2.7.1
 pyyaml==5.3.1
 kubernetes==12.0.0
+munch==2.5.0
 requests==2.24.0
 retry==0.9.2
 tqdm==4.51.0
@@ -15,3 +16,5 @@ pytest==6.1.1
 python-dateutil==2.8.1
 jira==2.0.0
 tabulate==0.8.7
+paramiko==2.7.2
+openshift-client==1.0.6
