Adding x-secret-key to api client along with agentauth methods Allowing multiple api-clients with different auth creds in a test Adding negative user and agent auth test

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -14,6 +14,7 @@ volumes:
   - $HOME/.ssh/:$HOME/.ssh/
 env:
   PULL_SECRET: $PULL_SECRET
+  SECOND_PULL_SECRET: $SECOND_PULL_SECRET
   NUM_WORKERS: $NUM_WORKERS
   SSH_PUB_KEY: $SSH_PUB_KEY
   CLUSTER_NAME: $CLUSTER_NAME
@@ -54,6 +55,7 @@ env:
   OC_PARAMS: $OC_PARAMS
   ENABLE_AUTH: $ENABLE_AUTH
   OFFLINE_TOKEN: $OFFLINE_TOKEN
+  SECOND_OFFLINE_TOKEN: $SECOND_OFFLINE_TOKEN
   SSO_URL: $SSO_URL
   OCM_CLIENT_ID: $OCM_CLIENT_ID
   OCM_CLIENT_SECRET: $OCM_CLIENT_SECRET
