--- a/discovery-infra/tests/pytest.ini
+++ b/discovery-infra/tests/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
-markers = 
+markers =
+    sanity: mark test as part of sanity
     regression: mark test as part of regression
     proxy: mark test as proxy feature
