--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,7 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    labels:
+      - "approved"
+      - "ok-to-test"
+      - "lgtm"
