--- a/skipper.yaml
+++ b/skipper.yaml
@@ -75,4 +75,5 @@ env:
   NUM_DAY2_WORKERS: $NUM_DAY2_WORKERS
   TEST: $TEST
   TEST_FUNC: $TEST_FUNC
+  TEST_MARKER: $TEST_MARKER
   PUBLIC_CONTAINER_REGISTRIES: $PUBLIC_CONTAINER_REGISTRIES
