MGMT-2322 Support NTP

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -50,6 +50,7 @@ env:
   IMAGE_BUILDER: $IMAGE_BUILDER
   CONNECTIVITY_CHECK_IMAGE: $CONNECTIVITY_CHECK_IMAGE
   API_VIP_CONNECTIVITY_CHECK_IMAGE: $API_VIP_CONNECTIVITY_CHECK_IMAGE
+  NTP_SYNCHRONIZER_IMAGE: $NTP_SYNCHRONIZER_IMAGE
   HARDWARE_INFO_IMAGE: $HARDWARE_INFO_IMAGE
   INVENTORY_IMAGE: $INVENTORY_IMAGE
   SERVICE_NAME: $SERVICE_NAME
