MGMT-2881: e2e tests: added wrong boot order tests
These tests will include the new cluster status "installing-pending-user-action".

Update the existing test: "Installation succeeded after master node had incorrect boot order".
Create "Installation succeeded on incorrect boot order - timeout is ignored".
Create "Installation succeeded after all nodes have an incorrect boot order".
Create "Reset\Cancel from Incorrect boot order"

--- a/discovery-infra/tests/pytest.ini
+++ b/discovery-infra/tests/pytest.ini
@@ -3,3 +3,5 @@ markers =
     sanity: mark test as part of sanity
     regression: mark test as part of regression
     proxy: mark test as proxy feature
+    wrong_boot_order: mark test as related to a wrong boot order case
+
