Add initial support of IPv6
- Deploy guests with IPv6
- Enable IPv6 connections from guests to assisted service via proxy
- Work around libvirt Terraform module not setting hostnames

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -79,3 +79,5 @@ env:
   PUBLIC_CONTAINER_REGISTRIES: $PUBLIC_CONTAINER_REGISTRIES
   E2E_TESTS_MODE: $E2E_TESTS_MODE
   LOG_FOLDER: $LOG_FOLDER
+  IPv4: $IPv4
+  IPv6: $IPv6
