add validation e2e tests

--- a/discovery-infra/tests/pytest.ini
+++ b/discovery-infra/tests/pytest.ini
@@ -4,4 +4,5 @@ markers =
     regression: mark test as part of regression
     proxy: mark test as proxy feature
     wrong_boot_order: mark test as related to a wrong boot order case
+    validations: mark test as related to validation cases
 
