adding download logs to cluster teardown

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -78,3 +78,4 @@ env:
   TEST_MARKER: $TEST_MARKER
   PUBLIC_CONTAINER_REGISTRIES: $PUBLIC_CONTAINER_REGISTRIES
   E2E_TESTS_MODE: $E2E_TESTS_MODE
+  LOG_FOLDER: $LOG_FOLDER
