--- a/skipper.yaml
+++ b/skipper.yaml
@@ -77,3 +77,4 @@ env:
   TEST_FUNC: $TEST_FUNC
   TEST_MARKER: $TEST_MARKER
   PUBLIC_CONTAINER_REGISTRIES: $PUBLIC_CONTAINER_REGISTRIES
+  E2E_TESTS_MODE: $E2E_TESTS_MODE
