--- a/skipper.yaml
+++ b/skipper.yaml
@@ -77,6 +77,7 @@ env:
   TEST: $TEST
   TEST_FUNC: $TEST_FUNC
   TEST_MARKER: $TEST_MARKER
+  TEST_WORKERS_NUM: $TEST_WORKERS_NUM
   PUBLIC_CONTAINER_REGISTRIES: $PUBLIC_CONTAINER_REGISTRIES
   E2E_TESTS_MODE: $E2E_TESTS_MODE
   LOG_FOLDER: $LOG_FOLDER
