--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ python-dateutil==2.8.1
 jira==2.0.0
 tabulate==0.8.7
 paramiko==2.7.2
+scp==0.13.3
 openshift-client==1.0.12
 Jinja2===2.11.2
 pytest-xdist==2.2.0
