--- a/Dockerfile.test-infra
+++ b/Dockerfile.test-infra
@@ -23,7 +23,9 @@ RUN pip3 install --no-cache-dir -r /tmp/requirements.txt && \
   pip3 install --upgrade /build/pip/*
 
 # TODO: Remove once OpenShift CI will be upgraded to 4.2 (see https://access.redhat.com/articles/4859371)
-RUN chmod uga+w /etc/passwd
+RUN chmod uga+w /etc/passwd && \
+    echo 'echo default:x:$(id -u):$(id -g):Default Application User:/output:/sbin/nologin\ >> /etc/passwd' > fix_uid.sh && \
+    chmod g+rwx fix_uid.sh
 
 # setting pre-commit env
 ENV PRE_COMMIT_HOME build
