MGMT-3776 added ISO_IMAGE_TYPE env var
Added support for iso image type (full-iso/minimal-iso):
- Added ISO_IMAGE_TYPE env var to Makefile.
- Propagated iso_image_type to 'generate_and_download_image' funcs.
- Added ImageType class for consts: FULL_ISO/MINIMAL_ISO.

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -94,3 +94,4 @@ env:
   PROXY: $PROXY
   FIO_PERF_CHECK_IMAGE: $FIO_PERF_CHECK_IMAGE
   CHECK_CLUSTER_VERSION: $CHECK_CLUSTER_VERSION
+  ISO_IMAGE_TYPE: $ISO_IMAGE_TYPE
