NO-ISSUE add FIO Image and CVO check parameters

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -92,3 +92,5 @@ env:
   PLATFORM: $PLATFORM
   STATIC_IPS_CONFIG: $STATIC_IPS_CONFIG
   PROXY: $PROXY
+  FIO_PERF_CHECK_IMAGE: $FIO_PERF_CHECK_IMAGE
+  CHECK_CLUSTER_VERSION: $CHECK_CLUSTER_VERSION
