MGMT-3885: enable configuring reverse proxy to use to access some registries like quay.io

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -88,5 +88,6 @@ env:
   PLATFORM: $PLATFORM
   STATIC_IPS_CONFIG: $STATIC_IPS_CONFIG
   PROXY: $PROXY
+  REVERSE_PROXY: $REVERSE_PROXY
   CHECK_CLUSTER_VERSION: $CHECK_CLUSTER_VERSION
   ISO_IMAGE_TYPE: $ISO_IMAGE_TYPE
