Adding new variables and slight changes to playbook to incorp latest changes

--- a/ansible-bm-install/collections/ansible_collections/okd/assisted_installer/roles/boot_iso/defaults/main.yml
+++ b/ansible-bm-install/collections/ansible_collections/okd/assisted_installer/roles/boot_iso/defaults/main.yml
@@ -5,3 +5,5 @@ vcenter_network: "VM Network"
 vcenter_vm_disk: 150
 vcenter_vm_mem_mb: 16384
 vcenter_vm_cpu: 4
+iso_image_location: "/tmp/test_images/"
+iso_name: "assisted-installer-installer-image.iso"
