--- a/ansible-bm-install/collections/ansible_collections/okd/assisted_installer/roles/create_iso/defaults/main.yml
+++ b/ansible-bm-install/collections/ansible_collections/okd/assisted_installer/roles/create_iso/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 # defaults file for create_iso
 cluster_id: ""
-iso_image_location: "/tmp/images/"
-iso_name: "installer-image.iso"
+iso_image_location: "/tmp/test_images/"
+iso_name: "assisted-installer-installer-image.iso"
 base_dns_domains: ""
