--- a/ansible-bm-install/collections/ansible_collections/okd/assisted_installer/roles/boot_iso/tasks/dell.yml
+++ b/ansible-bm-install/collections/ansible_collections/okd/assisted_installer/roles/boot_iso/tasks/dell.yml
@@ -9,13 +9,13 @@
         state: started
         detach: false
         rm: true
-        command: ["-v", "-r", "{{ hostvars[item]['bmc_address'] }}", "-u", "{{ hostvars[item]['bmc_user'] }}", "-p", "{{ hostvars[item]['bmc_password'] }}", "-i", "http://{{ groups['assisted_installer'][0] }}:8080/installer-image.iso"]
+        command: ["-v", "-r", "{{ hostvars[item]['bmc_address'] }}", "-u", "{{ hostvars[item]['bmc_user'] }}", "-p", "{{ hostvars[item]['bmc_password'] }}", "-i", "http://{{ groups['assisted_installer'][0] }}:8080/{{ iso_name }}"]
       register: drac_version
 
-- name: Using iDRAC ISO method for 13G and below 
+- name: Using iDRAC ISO method for 13G and below
   include_tasks: dell_idrac.yml
-  when: drac_version.stdout_lines | int <= 13 
+  when: drac_version.stdout_lines | int <= 13
 
-- name: Using iDRAC ISO method for 13G and below 
+- name: Using iDRAC ISO method for 13G and below
   include_tasks: dell_redfish.yml
-  when: drac_version.stdout_lines | int > 13 
+  when: drac_version.stdout_lines | int > 13
