--- a/ansible-bm-install/collections/ansible_collections/okd/assisted_installer/roles/host_iso/defaults/main.yml
+++ b/ansible-bm-install/collections/ansible_collections/okd/assisted_installer/roles/host_iso/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 # defaults file for host_iso
 
-iso_image_location: "/tmp/images/"
+iso_image_location: "/tmp/test_images/"
 webserver_port: 8080
