--- a/skipper.yaml
+++ b/skipper.yaml
@@ -17,6 +17,7 @@ volumes:
   - /run/log/journal:/run/log/journal
   - /dev/:/dev
   - /run/udev:/run/udev
+  - /var/ai-logs:/var/ai-logs
 env:
   PULL_SECRET: $PULL_SECRET
   SECOND_PULL_SECRET: $SECOND_PULL_SECRET
